--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.0
   pedantic: ^1.9.2
   firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
+  # firebase_auth: ^0.20.0+1
+  shared_preferences: ^0.5.12+4
+  http: ^0.12.0+4
+  google_sign_in: ^4.4.1 
   
 
 dev_dependencies:
