--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   pedantic: ^1.9.2
   firebase_core: ^0.7.0
   firebase_auth: ^0.20.0+1
+  google_sign_in: ^4.5.9
   
 
 dev_dependencies:
