--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'Runner' do
   # Comment the next line if you don't want to use dynamic frameworks
@@ -10,5 +10,7 @@ target 'Runner' do
 pod 'Firebase/Analytics'
 # add pods for any other desired Firebase products
 # https://firebase.google.com/docs/ios/setup#available-pods
+pod 'Firebase/Auth'
+pod 'Firebase/Firestore'
 
 end
