--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_auth: ^0.20.0+1
   google_sign_in: ^4.5.9
   firebase_messaging: ^6.0.16
-  
+  auto_size_text: ^2.1.0
   
 
 dev_dependencies:
@@ -54,8 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
