notification page added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   google_sign_in: ^4.5.9
   firebase_messaging: ^6.0.16
   auto_size_text: ^2.1.0
-  
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   flutter_test:
